[project]
name = "code-review-env"
version = "1.0.0"
description = "A real-world code review environment for reviewing code, identifying bugs, and suggesting fixes."
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
